codex-rs/core/src/subagents/snapshots/codex_core__subagents__hooks__tests__hook_payload_post_tool_use.snap
---
source: core/src/subagents/hooks.rs
expression: json
---
{
  "phase": "post_tool_use",
  "manifest_id": "docs-demo",
  "call_id": "call-PostToolUse",
  "session_source": "cli",
  "sandbox_policy": {
    "type": "danger-full-access"
  },
  "approval_policy": "never",
  "success": true,
  "stdout_snippet": "hook ok"
}
